--- a/pdfproject/template/front.html
+++ b/pdfproject/template/front.html
@@ -92,7 +92,7 @@
     }
 
     footer {
-      background-color: #007bff;
+      background-color: #00ff66;
       color: #5d1a28;
       text-align: center;
       padding: 1rem 0;
